Loader+chiamata axios iniziale+miglioramenti

--- a/src/style/general.scss
+++ b/src/style/general.scss
@@ -12,6 +12,7 @@ $fa-font-path: './webfonts';
 
 body{
     background-color: $bg-color;
+    color: $text-color
 }
 ::-webkit-scrollbar {
     width: 0.8rem;
