--- a/src/style/vars.scss
+++ b/src/style/vars.scss
@@ -1,3 +1,4 @@
-$bg-color: rgb(29, 29, 29);
+$bg-color: #141414;
 $black-color: black;
-$netflix-color: red;
+$netflix-color: #BC1221;
+$text-color: #C9C9C9;
